--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Money Coach – Budget + Debt + Psychology</title>
 <style>
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
   :root{
-    --bg:#0f1221; --card:#171a2e; --ink:#e9ecff; --muted:#aab1d9; --accent:#7c9bff;
+    --bg:#0d101f; --bg-glow:radial-gradient(circle at top,#1f2654 0%,rgba(13,16,31,0) 55%);
+    --card:#171a2e; --card-glass:rgba(23,26,46,.82);
+    --ink:#f3f5ff; --muted:#aab1d9; --accent:#7c9bff;
     --good:#38d39f; --warn:#ffb648; --bad:#ff6b6b; --line:#242845;
   }
   *{box-sizing:border-box}
-  html,body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif}
-  header{padding:18px 20px;border-bottom:1px solid var(--line);position:sticky;top:0;background:linear-gradient(180deg,#0f1221 0%,rgba(15,18,33,.8) 100%);backdrop-filter: blur(6px);z-index:5}
-  header h1{margin:0;font-size:18px;letter-spacing:.4px}
-  header .sub{color:var(--muted);font-size:12px;margin-top:4px}
-  main{max-width:1100px;margin:24px auto;padding:0 16px 80px}
+  html,body{margin:0;background:var(--bg);color:var(--ink);font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;min-height:100%}
+  body::before{content:"";position:fixed;inset:0;background:var(--bg-glow);z-index:-1;opacity:.9}
+  header{padding:24px 26px;border-bottom:1px solid rgba(124,155,255,.15);position:sticky;top:0;background:linear-gradient(180deg,rgba(15,18,33,.9) 0%,rgba(15,18,33,.65) 100%);backdrop-filter:blur(10px);z-index:5;box-shadow:0 12px 25px rgba(9,12,25,.25)}
+  header h1{margin:0;font-size:20px;letter-spacing:.04em;font-weight:600}
+  header .sub{color:var(--muted);font-size:13px;margin-top:6px}
+  main{max-width:1160px;margin:32px auto;padding:0 20px 96px}
 
   .grid{display:grid;gap:16px}
   @media (min-width: 880px){
@@ -22,35 +26,41 @@
     .grid-3{grid-template-columns:1fr 1fr 1fr}
   }
 
-  .card{background:var(--card);border:1px solid var(--line);border-radius:14px;padding:16px}
-  .card h2{margin:0 0 10px;font-size:16px}
-  .card h3{margin:16px 0 6px;font-size:13px;color:var(--muted);font-weight:600;text-transform:uppercase;letter-spacing:.06em}
-  .row{display:flex;gap:10px;align-items:center;margin:8px 0}
-  label{font-size:13px;color:var(--muted);min-width:140px}
-  input,select,textarea{width:100%;padding:10px 12px;border-radius:10px;border:1px solid var(--line);background:#0b0e1d;color:var(--ink);outline:none}
+  .card{background:var(--card-glass);border:1px solid rgba(124,155,255,.12);border-radius:18px;padding:20px;box-shadow:0 18px 40px rgba(9,12,25,.35);backdrop-filter:blur(12px)}
+  .card h2{margin:0 0 12px;font-size:17px;font-weight:600;display:flex;align-items:center;gap:10px}
+  .card h2::after{content:"";flex:1;height:1px;background:linear-gradient(90deg,rgba(124,155,255,.5),rgba(124,155,255,0));border-radius:999px}
+  .card h3{margin:18px 0 8px;font-size:13px;color:var(--muted);font-weight:600;text-transform:uppercase;letter-spacing:.12em}
+  .row{display:flex;gap:12px;align-items:center;margin:10px 0}
+  label{font-size:13px;color:var(--muted);min-width:150px;letter-spacing:.02em}
+  input,select,textarea{width:100%;padding:12px 14px;border-radius:12px;border:1px solid rgba(124,155,255,.2);background:rgba(10,13,28,.9);color:var(--ink);outline:none;transition:border .2s,box-shadow .2s,transform .2s}
+  input:focus,select:focus,textarea:focus{border-color:var(--accent);box-shadow:0 0 0 3px rgba(124,155,255,.18);transform:translateY(-1px)}
   textarea{min-height:80px;resize:vertical}
   .mono{font-variant-numeric:tabular-nums}
-  .btn{border:1px solid var(--line);background:#0b0e1d;color:var(--ink);padding:10px 14px;border-radius:10px;cursor:pointer}
-  .btn:hover{border-color:#2b315a}
-  .btn.primary{background:var(--accent);border-color:var(--accent);color:#0b0e1d;font-weight:600}
-  .pill{display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid var(--line);font-size:12px;color:var(--muted);margin-right:6px}
-  .kpi{display:flex;justify-content:space-between;gap:8px}
-  .kpi .box{flex:1;background:#0b0e1d;border:1px solid var(--line);border-radius:12px;padding:12px}
-  .kpi .box .label{color:var(--muted);font-size:11px;margin-bottom:6px}
-  .kpi .box .val{font-size:20px;font-weight:700}
-  table{width:100%;border-collapse:collapse}
-  th,td{border-bottom:1px solid var(--line);padding:10px 8px;text-align:left;font-size:14px}
-  th{color:var(--muted);font-weight:600}
-  tfoot td{font-weight:700}
+  .btn{border:1px solid rgba(124,155,255,.25);background:linear-gradient(135deg,rgba(15,22,46,.95),rgba(12,15,33,.85));color:var(--ink);padding:10px 16px;border-radius:12px;cursor:pointer;font-weight:500;transition:transform .2s,box-shadow .2s,border .2s}
+  .btn:hover{border-color:rgba(124,155,255,.45);box-shadow:0 12px 22px rgba(9,12,25,.4);transform:translateY(-1px)}
+  .btn.primary{background:linear-gradient(135deg,#85a5ff,#6f8dff);border-color:rgba(133,165,255,.8);color:#0b0e1d;font-weight:600;box-shadow:0 18px 28px rgba(124,155,255,.3)}
+  .btn.primary:hover{transform:translateY(-2px);box-shadow:0 22px 36px rgba(124,155,255,.38)}
+  .pill{display:inline-block;padding:6px 12px;border-radius:999px;border:1px solid rgba(124,155,255,.25);font-size:12px;color:var(--muted);margin-right:6px;background:rgba(12,15,32,.7)}
+  .kpi{display:flex;justify-content:space-between;gap:10px}
+  .kpi .box{flex:1;background:linear-gradient(160deg,rgba(16,21,43,.92),rgba(11,14,27,.85));border:1px solid rgba(124,155,255,.18);border-radius:16px;padding:16px;box-shadow:0 16px 28px rgba(9,12,25,.3)}
+  .kpi .box .label{color:var(--muted);font-size:11px;margin-bottom:8px;letter-spacing:.08em}
+  .kpi .box .val{font-size:22px;font-weight:700}
+  table{width:100%;border-collapse:collapse;border-radius:14px;overflow:hidden;background:rgba(12,15,32,.6)}
+  thead{background:rgba(18,22,45,.9)}
+  th,td{border-bottom:1px solid rgba(124,155,255,.12);padding:12px 10px;text-align:left;font-size:14px}
+  tbody tr:hover{background:rgba(18,22,45,.55)}
+  th{color:var(--muted);font-weight:600;text-transform:uppercase;letter-spacing:.08em;font-size:12px}
+  tfoot td{font-weight:700;background:rgba(18,22,45,.8)}
   .right{text-align:right}
   .good{color:var(--good)} .warn{color:var(--warn)} .bad{color:var(--bad)}
   .muted{color:var(--muted)}
   .small{font-size:12px;color:var(--muted)}
-  .divider{height:1px;background:var(--line);margin:12px 0}
-  .tag{background:#101533;border:1px solid #27306b;color:#cdd6ff;padding:4px 8px;border-radius:8px;font-size:11px;margin-right:6px}
-  details summary{cursor:pointer;color:#cfd6ff}
-  .flex{display:flex;gap:10px;align-items:center}
-  .note{font-size:12px;color:var(--muted);margin-top:4px}
+  .divider{height:1px;background:linear-gradient(90deg,rgba(124,155,255,.4),rgba(124,155,255,0));margin:14px 0}
+  .tag{background:rgba(16,21,51,.8);border:1px solid rgba(39,48,107,.6);color:#dbe2ff;padding:4px 10px;border-radius:8px;font-size:11px;margin-right:6px;letter-spacing:.05em}
+  details summary{cursor:pointer;color:#cfd6ff;transition:color .2s}
+  details[open] summary{color:#ffffff}
+  .flex{display:flex;gap:12px;align-items:center}
+  .note{font-size:12px;color:var(--muted);margin-top:6px;line-height:1.6}
   .caps{letter-spacing:.06em;text-transform:uppercase}
 </style>
 </head>
@@ -366,7 +376,7 @@
     const debts = readDebts().filter(d=>d.balance>0).map(d=>({...d}));
     if (!debts.length){ kpis.months.textContent="—"; kpis.interest.textContent="—"; kpis.firstDone.textContent="—"; return; }
 
-    const extra = +inputs.extraDebt.value||0;
+    let baseExtra = +inputs.extraDebt.value||0;
     let month=0, totalInterest=0, firstDone=null;
 
     // Sort helper
@@ -383,7 +393,7 @@
     while (debts.some(d=>d.balance>0) && month<600){ // hard stop at 50 years
       month++;
       // monthly interest & minimums
-      let extraPool = extra;
+      let extraPool = baseExtra;
       debts.forEach(d=>{
         if (d.balance<=0) return;
         const r = d.apr/100/12;
@@ -412,6 +422,7 @@
 
       // add freed minimums to extra for this and future months
       extraPool += freedMin;
+      baseExtra += freedMin;
 
       // pay extra to current target debt
       sortDebts();
