--- a/index.html
+++ b/index.html
@@ -8,60 +8,102 @@
   :root{
     --bg:#0f1221; --card:#171a2e; --ink:#e9ecff; --muted:#aab1d9; --accent:#7c9bff;
     --good:#38d39f; --warn:#ffb648; --bad:#ff6b6b; --line:#242845;
+    --frost:rgba(124,155,255,.08);
   }
   *{box-sizing:border-box}
-  html,body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif}
-  header{padding:18px 20px;border-bottom:1px solid var(--line);position:sticky;top:0;background:linear-gradient(180deg,#0f1221 0%,rgba(15,18,33,.8) 100%);backdrop-filter: blur(6px);z-index:5}
+  html,body{margin:0;background:radial-gradient(circle at top,var(--card) 0%,var(--bg) 52%,#070915 100%);color:var(--ink);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif;line-height:1.6;font-size:15px}
+  h1,h2,h3{margin:0;font-weight:600}
+  header{padding:18px 20px;border-bottom:1px solid var(--line);position:sticky;top:0;background:linear-gradient(180deg,#10132a 0%,rgba(15,18,33,.9) 65%,rgba(15,18,33,.5) 100%);backdrop-filter: blur(8px);z-index:5}
   header h1{margin:0;font-size:18px;letter-spacing:.4px}
   header .sub{color:var(--muted);font-size:12px;margin-top:4px;display:flex;gap:12px;flex-wrap:wrap;align-items:center}
-  header .date{padding:4px 8px;border:1px solid var(--line);border-radius:8px;background:#0b0e1d;font-variant-numeric:tabular-nums}
-  .monthBadge{padding:4px 8px;border:1px solid var(--line);border-radius:8px;background:#0b0e1d}
-  main{max-width:1150px;margin:24px auto;padding:0 16px 80px}
+  header .date,.monthBadge{padding:6px 10px;border:1px solid var(--line);border-radius:999px;background:#0b0e1d;font-variant-numeric:tabular-nums;box-shadow:0 8px 16px -12px rgba(0,0,0,.7)}
+  .monthBadge{color:var(--accent)}
+  main{max-width:1150px;margin:28px auto;padding:0 16px 90px}
 
-  .grid{display:grid;gap:16px}
+  .grid{display:grid;gap:18px}
   @media (min-width: 980px){
     .grid-2{grid-template-columns:1.2fr .8fr}
   }
 
-  .card{background:var(--card);border:1px solid var(--line);border-radius:14px;padding:0;overflow:hidden}
-  summary{list-style:none;padding:14px 16px;background:transparent;cursor:pointer;display:flex;align-items:center;justify-content:space-between}
+  .card{background:rgba(18,22,41,.9);border:1px solid rgba(124,155,255,.15);border-radius:18px;padding:0;overflow:hidden;box-shadow:0 26px 50px -34px rgba(7,12,32,.85);backdrop-filter:blur(6px)}
+  summary{list-style:none;padding:16px 18px;background:linear-gradient(90deg,rgba(124,155,255,.12),rgba(124,155,255,0));cursor:pointer;display:flex;align-items:center;justify-content:space-between;gap:12px}
   summary::-webkit-details-marker{display:none}
-  .sum-left{display:flex;align-items:center;gap:10px}
-  .chev{transition:transform .2s ease}
+  summary h2{font-size:17px}
+  .sum-left{display:flex;align-items:center;gap:12px;min-width:0}
+  .sum-left h2{white-space:nowrap;text-overflow:ellipsis;overflow:hidden}
+  .chev{transition:transform .2s ease;color:var(--accent)}
   details[open] .chev{transform:rotate(90deg)}
-  .content{padding:14px 16px;border-top:1px solid var(--line)}
-  .row{display:flex;gap:10px;align-items:center;margin:8px 0}
-  label{font-size:13px;color:var(--muted);min-width:200px}
-  input,select,textarea{width:100%;padding:10px 12px;border-radius:10px;border:1px solid var(--line);background:#0b0e1d;color:var(--ink);outline:none}
-  textarea{min-height:80px;resize:vertical}
+  .content{padding:18px;border-top:1px solid rgba(124,155,255,.15);display:flex;flex-direction:column;gap:10px}
+  .row{display:flex;gap:12px;align-items:center}
+  label{font-size:13px;color:var(--muted);min-width:210px}
+  input,select,textarea{width:100%;padding:12px 14px;border-radius:12px;border:1px solid rgba(124,155,255,.18);background:rgba(7,10,25,.72);color:var(--ink);outline:none;font-size:15px;transition:border-color .2s ease,box-shadow .2s ease,background .2s ease}
+  input:focus,select:focus,textarea:focus{border-color:var(--accent);box-shadow:0 0 0 3px rgba(124,155,255,.2);background:rgba(7,10,25,.92)}
+  textarea{min-height:90px;resize:vertical}
   .mono{font-variant-numeric:tabular-nums}
-  .btn{border:1px solid var(--line);background:#0b0e1d;color:var(--ink);padding:10px 14px;border-radius:10px;cursor:pointer}
-  .btn:hover{border-color:#2b315a}
-  .btn.primary{background:var(--accent);border-color:var(--accent);color:#0b0e1d;font-weight:600}
-  .payWrap{display:flex;gap:8px;width:100%;align-items:center}
+  .btn{border:1px solid rgba(124,155,255,.2);background:rgba(7,10,25,.78);color:var(--ink);padding:10px 16px;border-radius:12px;cursor:pointer;font-weight:500;transition:transform .15s ease,box-shadow .15s ease,border-color .2s ease;background-image:linear-gradient(135deg,rgba(124,155,255,.18),rgba(124,155,255,.05));backdrop-filter:blur(4px)}
+  .btn:hover{border-color:var(--accent);box-shadow:0 12px 28px -18px rgba(124,155,255,.6);transform:translateY(-1px)}
+  .btn:active{transform:translateY(0)}
+  .btn.primary{background:var(--accent);border-color:var(--accent);color:#0b0e1d;font-weight:600;box-shadow:0 10px 22px -14px rgba(124,155,255,.9)}
+  .payWrap{display:flex;gap:10px;width:100%;align-items:center}
   .payWrap input{flex:1}
   .btn.payToggle{white-space:nowrap}
   .btn.payToggle.paid{background:var(--good);border-color:var(--good);color:#0b0e1d;font-weight:600}
-  .pill{display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid var(--line);font-size:12px;color:var(--muted);margin-left:10px}
-  .kpi{display:flex;justify-content:space-between;gap:8px;flex-wrap:wrap}
-  .kpi .box{flex:1;background:#0b0e1d;border:1px solid var(--line);border-radius:12px;padding:12px;min-width:180px}
+  .pill{display:inline-flex;align-items:center;gap:6px;padding:6px 12px;border-radius:999px;border:1px solid rgba(124,155,255,.25);font-size:12px;color:var(--accent);margin-left:10px;background:rgba(124,155,255,.12);box-shadow:0 12px 24px -20px rgba(124,155,255,.7)}
+  .kpi{display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap}
+  .kpi .box{flex:1;background:rgba(7,10,25,.72);border:1px solid rgba(124,155,255,.15);border-radius:14px;padding:14px;min-width:180px;box-shadow:0 18px 36px -30px rgba(7,10,25,.9)}
   .kpi .box .label{color:var(--muted);font-size:11px;margin-bottom:6px}
   .kpi .box .val{font-size:20px;font-weight:700}
-  table{width:100%;border-collapse:collapse}
-  th,td{border-bottom:1px solid var(--line);padding:10px 8px;text-align:left;font-size:14px}
-  th{color:var(--muted);font-weight:600}
-  tfoot td{font-weight:700}
+  .tableWrap{overflow-x:auto;border-radius:14px;border:1px solid rgba(124,155,255,.15);background:rgba(7,10,25,.65)}
+  table{width:100%;border-collapse:separate;border-spacing:0}
+  th,td{border-bottom:1px solid rgba(124,155,255,.12);padding:12px 14px;text-align:left;font-size:14px}
+  th:first-child,td:first-child{border-top-left-radius:12px;border-bottom-left-radius:12px}
+  th:last-child,td:last-child{border-top-right-radius:12px;border-bottom-right-radius:12px}
+  thead th{background:rgba(124,155,255,.12);color:var(--muted);font-weight:600;text-transform:uppercase;font-size:12px;letter-spacing:.6px}
+  tbody tr{background:rgba(124,155,255,.04);transition:background .2s ease,transform .2s ease}
+  tbody tr:nth-child(even){background:rgba(124,155,255,.08)}
+  tbody tr:hover{background:rgba(124,155,255,.15);transform:translateY(-1px)}
+  tfoot td{font-weight:700;background:rgba(124,155,255,.1)}
   .right{text-align:right}
   .good{color:var(--good)} .warn{color:var(--warn)} .bad{color:var(--bad)}
   .muted{color:var(--muted)}
   .small{font-size:12px;color:var(--muted)}
   .row.is-paid label{color:var(--good)}
   .divider{height:1px;background:var(--line);margin:12px 0}
-  .progress{height:10px;background:#0b0e1d;border:1px solid var(--line);border-radius:999px;overflow:hidden}
-  .progress > div{height:100%;background:var(--accent);width:0%}
+  .progress{height:10px;background:rgba(7,10,25,.7);border:1px solid rgba(124,155,255,.18);border-radius:999px;overflow:hidden}
+  .progress > div{height:100%;background:linear-gradient(90deg,var(--accent),#9ce7ff);width:0%}
   .note{font-size:12px;color:var(--muted);margin-top:6px}
   .archiveItem{padding:10px;border:1px dashed var(--line);border-radius:10px;margin:6px 0}
   tr.paid td{opacity:.75}
+
+  @media (max-width: 900px){
+    header{padding:16px 16px}
+    header h1{font-size:17px}
+    main{padding:0 14px 80px}
+    label{min-width:180px}
+  }
+
+  @media (max-width: 720px){
+    header{position:static;border-bottom:none;background:transparent;padding:18px 14px 0}
+    header h1{font-size:16px}
+    header .sub{font-size:11px}
+    main{margin:18px auto 70px;padding:0 12px}
+    .grid-2{grid-template-columns:1fr}
+    .card{border-radius:16px}
+    summary{padding:14px 16px}
+    summary h2{font-size:16px}
+    .pill{margin-left:0}
+    .content{padding:16px}
+    .row{flex-direction:column;align-items:stretch;gap:6px}
+    label{min-width:0;font-size:12px}
+    input,select,textarea{font-size:16px}
+    .payWrap{flex-direction:column;align-items:stretch}
+    .payWrap button{width:100%}
+    .kpi{flex-direction:column}
+    .kpi .box{min-width:unset}
+    .tableWrap{margin:0 -6px;padding:0 6px}
+    table{min-width:540px}
+    th,td{padding:12px 12px}
+  }
 </style>
 </head>
 <body>
@@ -150,18 +192,20 @@
         </summary>
         <div class="content">
           <div class="row"><button class="btn" id="addDebt">+ Lisa võlg</button> <button class="btn" id="exportDebtCsv">Ekspordi CSV</button></div>
-          <table id="debtsTbl">
-            <thead>
-              <tr>
-                <th>Võlg</th><th class="right">Jääk (€)</th><th class="right">Miinimum (€)</th><th>Tähtaeg (PP)</th><th>Märkused</th><th>Makstud?</th><th></th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-            <tfoot>
+          <div class="tableWrap">
+            <table id="debtsTbl">
+              <thead>
+                <tr>
+                  <th>Võlg</th><th class="right">Jääk (€)</th><th class="right">Miinimum (€)</th><th>Tähtaeg (PP)</th><th>Märkused</th><th>Makstud?</th><th></th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+              <tfoot>
               <tr><td><strong>Kokku</strong></td><td class="right mono" id="sumBal">0</td>
                   <td class="right mono" id="sumMin">0</td><td></td><td></td><td></td><td></td></tr>
-            </tfoot>
-          </table>
+              </tfoot>
+            </table>
+          </div>
           <div class="row"><label><input type="checkbox" id="autoApply" /> Rakenda kuu maksed automaatselt</label></div>
           <div class="kpi" style="margin-top:10px">
             <div class="box"><div class="label">Aeg võlavabaks</div><div class="val mono" id="kpiMonths">—</div></div>
@@ -198,11 +242,13 @@
           <div class="row"><button class="btn primary" id="addExp">+ Lisa kulu</button></div>
 
           <div class="divider"></div>
-          <table id="expTbl">
-            <thead><tr><th>Kuupäev</th><th>Kategooria</th><th>Märkus</th><th class="right">€</th><th></th></tr></thead>
-            <tbody></tbody>
-            <tfoot><tr><td colspan="3"><strong>Kokku (kuu):</strong></td><td class="right mono" id="expSum">0.00</td><td></td></tr></tfoot>
-          </table>
+          <div class="tableWrap">
+            <table id="expTbl">
+              <thead><tr><th>Kuupäev</th><th>Kategooria</th><th>Märkus</th><th class="right">€</th><th></th></tr></thead>
+              <tbody></tbody>
+              <tfoot><tr><td colspan="3"><strong>Kokku (kuu):</strong></td><td class="right mono" id="expSum">0.00</td><td></td></tr></tfoot>
+            </table>
+          </div>
 
           <div class="divider"></div>
           <h3>Sel kuul kategooriate kaupa</h3>
