--- a/index.html
+++ b/index.html
@@ -562,10 +562,11 @@
         state.data.debts = debts;
 
         // Archive snapshot incl. payments summary
+        const snapshotData = JSON.parse(JSON.stringify(state.data || {}));
         const archiveEntry = {
           month: prevMonth,
           ts: Date.now(),
-          data: state.data || {},
+          data: snapshotData,
           expenses: prevMonthExpenses,
           carryOver: carryOver,
           payments: {
@@ -576,10 +577,11 @@
         state.archives.push(archiveEntry);
       } else {
         // No auto-apply: archive without altering debts
+        const snapshotData = JSON.parse(JSON.stringify(state.data || {}));
         const archiveEntry = {
           month: prevMonth,
           ts: Date.now(),
-          data: state.data || {},
+          data: snapshotData,
           expenses: prevMonthExpenses,
           carryOver: carryOver
         };
